// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeptideSearchResult should render with the correct number of results in the title, not own job 1`] = `
<DocumentFragment>
  {{ SideBarLayout start }}
  <div
    class="page-intro"
  >
    <h1
      class=""
    >
      Peptide search
      <small>
         2 results 
      </small>
      <small>
        found in UniProtKB
      </small>
    </h1>
  </div>
  <div
    class="tabs"
  >
    <div
      class="tabs__header"
      role="tablist"
    >
      <div
        aria-controls="2"
        class="tabs__header__item tabs__header__item--active"
        data-target="overview"
        data-testid="tab-title"
        role="tab"
      >
        <a
          href="/peptide-search/remote-id/overview"
        >
          Overview
        </a>
      </div>
      <div
        aria-controls="2"
        class="tabs__header__item"
        data-target="input-parameters"
        data-testid="tab-title"
        role="tab"
      >
        <a
          href="/peptide-search/remote-id/input-parameters"
        >
          Input Parameters
        </a>
      </div>
      <div
        aria-controls="2"
        class="tabs__header__item"
        data-target="api-request"
        data-testid="tab-title"
        role="tab"
      >
        <a
          href="/peptide-search/remote-id/api-request"
        >
          API Request
        </a>
      </div>
    </div>
    <div
      data-testid="tab-content"
      id="2"
      role="tabpanel"
    >
      <div
        class="button-group results-buttons"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown"
        >
          <button
            class="button tertiary"
            type="button"
          >
            <test-file-stub
              width="1.4ch"
            />
            Tools
          </button>
        </div>
        <button
          class="button tertiary"
          type="button"
        >
          <test-file-stub />
          Download (2)
        </button>
        <button
          class="button tertiary disabled no-small"
          disabled=""
          title="Select at least one entry to add to the basket"
          type="button"
        >
          <test-file-stub />
          Add
        </button>
        <form
          aria-label="Result view selector"
        >
          <span
            role="radiogroup"
          >
            View:
            <label>
              Cards 
              <input
                name="view"
                type="radio"
                value="cards"
              />
            </label>
            <label>
              Table 
              <input
                checked=""
                name="view"
                type="radio"
                value="table"
              />
            </label>
          </span>
        </form>
        <button
          class="button tertiary"
          type="button"
        >
          <test-file-stub />
          Customize columns
        </button>
        <button
          class="button tertiary"
          type="button"
        >
          <test-file-stub />
          Resubmit
        </button>
      </div>
      <table
        class="hotjar-margin results-data data-table"
      >
        <thead>
          <tr>
            <th
              class="data-table__header-cell--checkbox"
            >
              <div
                class="checkbox-cell"
              >
                <input
                  id="7"
                  type="checkbox"
                />
                <label
                  aria-label="Selection control for all visible items"
                  for="7"
                />
              </div>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span>
                  Entry
                </span>
              </span>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span>
                  Match
                </span>
              </span>
            </th>
            <th
              class=""
            />
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span
                  data-article-id="entry_name"
                >
                  Entry Name
                </span>
              </span>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span
                  data-article-id="protein_names"
                >
                  Protein Names
                </span>
              </span>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span
                  data-article-id="gene_name"
                >
                  Gene Names
                </span>
              </span>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span
                  data-article-id="organism-name"
                >
                  Organism
                </span>
              </span>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span>
                  Length
                </span>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          translate="no"
        >
          <tr>
            <td
              class="checkbox-cell"
            >
              <input
                data-id="P19926"
                id="8"
                type="checkbox"
              />
              <label
                aria-label="P19926"
                for="8"
                title="click to select, shift+click for multiple selection"
              />
            </td>
            <td>
              <span
                class="no-wrap accession-view"
              >
                <a
                  class="accession"
                  href="/uniprotkb/P19926/entry"
                >
                  P19926
                </a>
              </span>
            </td>
            <td />
            <td>
              <span
                class="entry-title__status icon--reviewed"
                title="This marks a reviewed UniProtKB entry"
              >
                <test-file-stub />
              </span>
            </td>
            <td>
              AGP_ECOLI
            </td>
            <td>
              <span
                translate="yes"
              >
                <span
                  style="font-weight: bolder;"
                >
                  Glucose-1-phosphatase
                </span>
                <button
                  aria-expanded="false"
                  class="button tertiary ellipsis-reveal"
                  title="Show more"
                  type="button"
                >
                  [...]
                </button>
              </span>
            </td>
            <td>
              <span
                class="bolder"
              >
                agp
              </span>
              , b1002, JW0987
            </td>
            <td>
              <a
                href="/taxonomy/83333"
                title="Escherichia coli (strain K12), taxon ID 83333"
                translate="no"
              >
                Escherichia coli (strain K12)
              </a>
            </td>
            <td>
              413 AA
            </td>
          </tr>
          <tr>
            <td
              class="checkbox-cell"
            >
              <input
                data-id="P13866"
                id="9"
                type="checkbox"
              />
              <label
                aria-label="P13866"
                for="9"
                title="click to select, shift+click for multiple selection"
              />
            </td>
            <td>
              <span
                class="no-wrap accession-view"
              >
                <a
                  class="accession"
                  href="/uniprotkb/P13866/entry"
                >
                  P13866
                </a>
              </span>
            </td>
            <td />
            <td>
              <span
                class="entry-title__status icon--reviewed"
                title="This marks a reviewed UniProtKB entry"
              >
                <test-file-stub />
              </span>
            </td>
            <td>
              SC5A1_HUMAN
            </td>
            <td>
              <span
                translate="yes"
              >
                <span
                  style="font-weight: bolder;"
                >
                  Sodium/glucose cotransporter 1
                </span>
                <button
                  aria-expanded="false"
                  class="button tertiary ellipsis-reveal"
                  title="Show more"
                  type="button"
                >
                  [...]
                </button>
              </span>
            </td>
            <td>
              <span
                class="bolder"
              >
                SLC5A1
              </span>
              , NAGT, SGLT1
            </td>
            <td>
              <a
                href="/taxonomy/9606"
                title="Homo sapiens (Human), taxon ID 9606"
                translate="no"
              >
                Homo sapiens (Human)
              </a>
            </td>
            <td>
              664 AA
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="data-loader__loading"
      />
    </div>
  </div>
  {{ SideBarLayout end }}
</DocumentFragment>
`;

exports[`PeptideSearchResult should render with the correct number of results in the title, own user job 1`] = `
<DocumentFragment>
  {{ SideBarLayout start }}
  <div
    class="page-intro"
  >
    <h1
      class=""
    >
      Peptide search
      <small>
         2 results 
      </small>
      <small>
        found in UniProtKB
      </small>
    </h1>
  </div>
  <div
    class="tabs"
  >
    <div
      class="tabs__header"
      role="tablist"
    >
      <div
        aria-controls="4"
        class="tabs__header__item tabs__header__item--active"
        data-target="overview"
        data-testid="tab-title"
        role="tab"
      >
        <a
          href="/peptide-search/remote-id/overview"
        >
          Overview
        </a>
      </div>
      <div
        aria-controls="4"
        class="tabs__header__item"
        data-target="input-parameters"
        data-testid="tab-title"
        role="tab"
      >
        <a
          href="/peptide-search/remote-id/input-parameters"
        >
          Input Parameters
        </a>
      </div>
      <div
        aria-controls="4"
        class="tabs__header__item"
        data-target="api-request"
        data-testid="tab-title"
        role="tab"
      >
        <a
          href="/peptide-search/remote-id/api-request"
        >
          API Request
        </a>
      </div>
    </div>
    <div
      data-testid="tab-content"
      id="4"
      role="tabpanel"
    >
      <div
        class="button-group results-buttons"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown"
        >
          <button
            class="button tertiary"
            type="button"
          >
            <test-file-stub
              width="1.4ch"
            />
            Tools
          </button>
        </div>
        <button
          class="button tertiary"
          type="button"
        >
          <test-file-stub />
          Download (2)
        </button>
        <button
          class="button tertiary disabled no-small"
          disabled=""
          title="Select at least one entry to add to the basket"
          type="button"
        >
          <test-file-stub />
          Add
        </button>
        <form
          aria-label="Result view selector"
        >
          <span
            role="radiogroup"
          >
            View:
            <label>
              Cards 
              <input
                name="view"
                type="radio"
                value="cards"
              />
            </label>
            <label>
              Table 
              <input
                checked=""
                name="view"
                type="radio"
                value="table"
              />
            </label>
          </span>
        </form>
        <button
          class="button tertiary"
          type="button"
        >
          <test-file-stub />
          Customize columns
        </button>
        <button
          class="button tertiary"
          type="button"
        >
          <test-file-stub />
          Resubmit
        </button>
      </div>
      <table
        class="hotjar-margin results-data data-table"
      >
        <thead>
          <tr>
            <th
              class="data-table__header-cell--checkbox"
            >
              <div
                class="checkbox-cell"
              >
                <input
                  id="5"
                  type="checkbox"
                />
                <label
                  aria-label="Selection control for all visible items"
                  for="5"
                />
              </div>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span>
                  Entry
                </span>
              </span>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span>
                  Match
                </span>
              </span>
            </th>
            <th
              class=""
            />
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span
                  data-article-id="entry_name"
                >
                  Entry Name
                </span>
              </span>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span
                  data-article-id="protein_names"
                >
                  Protein Names
                </span>
              </span>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span
                  data-article-id="gene_name"
                >
                  Gene Names
                </span>
              </span>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span
                  data-article-id="organism-name"
                >
                  Organism
                </span>
              </span>
            </th>
            <th
              class=""
            >
              <span
                aria-expanded="false"
              >
                <span>
                  Length
                </span>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          translate="no"
        >
          <tr>
            <td
              class="checkbox-cell"
            >
              <input
                data-id="P19926"
                id="6"
                type="checkbox"
              />
              <label
                aria-label="P19926"
                for="6"
                title="click to select, shift+click for multiple selection"
              />
            </td>
            <td>
              <span
                class="no-wrap accession-view"
              >
                <a
                  class="accession"
                  href="/uniprotkb/P19926/entry"
                >
                  P19926
                </a>
              </span>
            </td>
            <td />
            <td>
              <span
                class="entry-title__status icon--reviewed"
                title="This marks a reviewed UniProtKB entry"
              >
                <test-file-stub />
              </span>
            </td>
            <td>
              AGP_ECOLI
            </td>
            <td>
              <span
                translate="yes"
              >
                <span
                  style="font-weight: bolder;"
                >
                  Glucose-1-phosphatase
                </span>
                <button
                  aria-expanded="false"
                  class="button tertiary ellipsis-reveal"
                  title="Show more"
                  type="button"
                >
                  [...]
                </button>
              </span>
            </td>
            <td>
              <span
                class="bolder"
              >
                agp
              </span>
              , b1002, JW0987
            </td>
            <td>
              <a
                href="/taxonomy/83333"
                title="Escherichia coli (strain K12), taxon ID 83333"
                translate="no"
              >
                Escherichia coli (strain K12)
              </a>
            </td>
            <td>
              413 AA
            </td>
          </tr>
          <tr>
            <td
              class="checkbox-cell"
            >
              <input
                data-id="P13866"
                id="7"
                type="checkbox"
              />
              <label
                aria-label="P13866"
                for="7"
                title="click to select, shift+click for multiple selection"
              />
            </td>
            <td>
              <span
                class="no-wrap accession-view"
              >
                <a
                  class="accession"
                  href="/uniprotkb/P13866/entry"
                >
                  P13866
                </a>
              </span>
            </td>
            <td />
            <td>
              <span
                class="entry-title__status icon--reviewed"
                title="This marks a reviewed UniProtKB entry"
              >
                <test-file-stub />
              </span>
            </td>
            <td>
              SC5A1_HUMAN
            </td>
            <td>
              <span
                translate="yes"
              >
                <span
                  style="font-weight: bolder;"
                >
                  Sodium/glucose cotransporter 1
                </span>
                <button
                  aria-expanded="false"
                  class="button tertiary ellipsis-reveal"
                  title="Show more"
                  type="button"
                >
                  [...]
                </button>
              </span>
            </td>
            <td>
              <span
                class="bolder"
              >
                SLC5A1
              </span>
              , NAGT, SGLT1
            </td>
            <td>
              <a
                href="/taxonomy/9606"
                title="Homo sapiens (Human), taxon ID 9606"
                translate="no"
              >
                Homo sapiens (Human)
              </a>
            </td>
            <td>
              664 AA
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="data-loader__loading"
      />
    </div>
  </div>
  {{ SideBarLayout end }}
</DocumentFragment>
`;
